Fix small gap in the bottom

--- a/src/Extensions/Relationships/css/relationships.css
+++ b/src/Extensions/Relationships/css/relationships.css
@@ -7,7 +7,7 @@
 }
 
 .mb-content {
-	padding: 32px;
+	padding: 32px 32px 0 32px;
 }
 
 .og-field {
